# bazarr-whisper-proxy

./: .gitignore  Makefile  README.md  SPEC.md  compose.e2e.yml  compose.example.yml  config.example.env  flake.nix  pyproject.toml  whisperbridge-api-contract.md
docs/: e2e.md
scripts/: e2e.sh
src/whisper_proxy/: __main__.py  _types.py  aligner.py  app.py  audio.py  config.py  deps.py  lingarr.py  logging_setup.py  middleware.py  openarc.py
src/whisper_proxy/lang/: __init__.py  map.py
src/whisper_proxy/routes/: asr.py  detect.py  detect_language.py  status.py
src/whisper_proxy/srt/: __init__.py  segment.py  writer.py
tests/: test_aligner.py  test_app.py  test_asr.py  test_asr_translate.py  test_audio.py  test_config.py  test_detect_language.py  test_lang_map.py  test_logging.py  test_openarc.py  test_srt.py  test_status.py
tests/e2e/: conftest.py  test_detect_language.py  test_failure_modes.py  test_lingarr_live.py  test_provisioning.py  test_transcribe.py  test_translate.py
tests/e2e/fixtures/: PROVENANCE.md  build.py  manifest.json
tests/e2e/provision/: __main__.py  _http.py  bazarr.py  lingarr.py  radarr.py
tests/fixtures/audio/: short_en.pcm
tests/fixtures/words/: long_sentence.json  sentences.json  silence_break.json  simple.json  two_line_wrap.json  unicode_punct.json
