[project]
name = "whisper-proxy"
version = "0.1.0"
description = "Bazarr-to-OpenArc ASR bridge with forced alignment and SRT assembly"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "pydantic-settings>=2.7",
    "ctc-forced-aligner>=1.0",
    "openvino>=2026.1",
    "pycountry>=24.6",
    "unidecode>=0.5",
    "torch>=2.5",
    "numpy>=2.0",
    "soundfile>=0.13",
    "pysrt>=1.1",
    "python-json-logger>=3.2",
    "python-multipart>=0.0.9",
]

[project.scripts]
whisper-proxy = "whisper_proxy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_proxy"]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "anyio[trio]>=4.7",
    "httpx>=0.28",
    "pysubs2>=1.8.1",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PT", "RUF"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["onnxruntime", "ctc_forced_aligner", "pysrt", "openvino"]
ignore_missing_imports = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # pysrt uses codecs.open() internally; upstream issue, not ours.
    "ignore::DeprecationWarning:pysrt",
]
